--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 
 .parallax {
     /* The image used */
-     background-image: url("../images/background.png");
+     background-image: url("https://popmenucloud.com/htoyiqwv/f0b77f05-c354-49e8-b1e0-12a1c852f59c.webp");
     /* Set a specific height */
     min-height: 500px; 
   
